<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Microsoft Corporation. All rights reserved.
  ~ Licensed under the MIT License.
  -->

<layout>
    <data>
        <variable
            name="viewModel"
            type="com.microsoft.intune.samples.taskr.trustedroots.ui.TrustedRootsHttpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp">

            <RelativeLayout
                android:id="@+id/input_section"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/submitRequestButton"
                android:padding="10dp">

                <TextView
                    android:id="@+id/requestUrlTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_url_label"/>

                <EditText
                    android:id="@+id/requestUrlEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.requestUrl}"
                    android:hint="@string/request_url_hint"
                    android:ems="10"
                    android:inputType="textUri|textMultiLine|none"
                    android:nestedScrollingEnabled="true"
                    android:scrollHorizontally="true"
                    android:singleLine="false"
                    android:layout_below="@id/requestUrlTextView"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkBoxTrustCustomCerts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trust_custom_certs_text"
                    android:checked="@={viewModel.trustCustomCerts}"
                    android:layout_below="@id/requestUrlEditText" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/response_section"
                    android:layout_below="@id/checkBoxTrustCustomCerts">

                    <TextView
                        android:id="@+id/textViewResponseHeadersLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/response_label"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/responseTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="true"
                        android:focusable="true"
                        android:longClickable="true"
                        android:text="@{viewModel.response.toString()}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewResponseHeadersLabel" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/submitRequestButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_request"
                android:onClick="@{() -> viewModel.submitRequest()}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout >

</layout>